--- a/playbooks/up.yml
+++ b/playbooks/up.yml
@@ -4,3 +4,15 @@
     - include_vars: '{{ playbook_dir }}/config.yml'
     - import_role:
         name: default
+
+- hosts: swarm_managers
+  tasks:
+    - include_vars: '{{ playbook_dir }}/config.yml'
+    - import_role:
+        name: docker
+
+- hosts: swarm_workers
+  tasks:
+    - include_vars: '{{ playbook_dir }}/config.yml'
+    - import_role:
+        name: docker
