fix: Include tasks in upgrade docker role too

--- a/playbooks/roles/upgrade-docker/main.yml
+++ b/playbooks/roles/upgrade-docker/main.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: Gather the package facts
   ansible.builtin.package_facts:
     manager: auto
@@ -7,5 +6,5 @@
 - name: Update Docker
   when: "'docker-ce' in ansible_facts.packages"
   block:
-    - import_tasks: update.yml
-    - import_tasks: plugins.yml
+    - include_tasks: update.yml
+    - include_tasks: plugins.yml
