feat: Install Docker on all nodes and initialize swarm on managers

--- a/playbooks/roles/docker/tasks/install.yml
+++ b/playbooks/roles/docker/tasks/install.yml
@@ -5,7 +5,7 @@
 
 - name: Add Docker repository
   apt_repository:
-    repo: deb [arch="arm64" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian bookworm stable
+    repo: deb https://download.docker.com/linux/debian bookworm stable
     state: present
 
 - name: Update apt
