--- a/playbooks/up.yml
+++ b/playbooks/up.yml
@@ -1,4 +1,5 @@
 ---
+
 - hosts: all
   tasks:
     - include_vars: '{{ playbook_dir }}/config.yml'
@@ -10,6 +11,8 @@
     - include_vars: '{{ playbook_dir }}/config.yml'
     - import_role:
         name: docker
+    - import_role:
+        name: swarm-manager
 
 - hosts: swarm_workers
   tasks:
