--- a/playbooks/up.yml
+++ b/playbooks/up.yml
@@ -21,3 +21,9 @@
         name: docker
     - import_role:
         name: swarm-worker
+
+- hosts: gluster_nodes
+  tasks:
+    - include_vars: "{{playbook_dir}}/config.yml"
+    - import_role:
+        name: gluster
