--- a/playbooks/roles/swarm-worker/tasks/join.yml
+++ b/playbooks/roles/swarm-worker/tasks/join.yml
@@ -1,13 +1,11 @@
 ---
-- when: inventory_hostname != groups['swarm_managers'][0]
-  block:
-    - name: Check if Swarm has already been initialized
-      shell: docker info --format '\{\{ .Swarm.LocalNodeState \}\}'
-      register: swarm_status
-      ignore_errors: true
 
-    - name: Add Docker node to existing Swarm as worker
-      shell: docker swarm join --token {{ hostvars[groups['swarm_managers'][0]]['worker_token']['stdout'] }} [{{ groups['swarm_managers'][0] }}]:2377
-      # Only join swarm when node is not already part of a swarm.
-      when: swarm_status.stdout != 'active'
+- name: Get info on docker host
+  community.docker.docker_host_info:
+  register: docker_info
+
+- name: Add Docker node to existing Swarm as worker
+  shell: docker swarm join --token {{ hostvars[groups['swarm_managers'][0]]['worker_token']['stdout'] }} [{{ groups['swarm_managers'][0] }}]:2377
+  # Only join swarm when node is not already part of a swarm.
+  when: docker_info.host_info.Swarm.LocalNodeState != 'active'
 
