--- a/playbooks/up.yml
+++ b/playbooks/up.yml
@@ -12,13 +12,25 @@
     - import_role:
         name: proxy
 
+- hosts: gluster_nodes
+  tasks:
+    - include_vars: "{{playbook_dir}}/config.yml"
+    - import_role:
+        name: gluster
+    - import_role:
+        name: gluster-volume
+
 - hosts: swarm_managers
+  vars_files:
+    - '{{ playbook_dir }}/roles/stacks/variables.yml'
   tasks:
     - include_vars: '{{ playbook_dir }}/config.yml'
     - import_role:
         name: docker
     - import_role:
         name: swarm-manager
+    - import_role:
+        name: stacks
 
 - hosts: swarm_workers
   tasks:
@@ -27,11 +39,3 @@
         name: docker
     - import_role:
         name: swarm-worker
-
-- hosts: gluster_nodes
-  tasks:
-    - include_vars: "{{playbook_dir}}/config.yml"
-    - import_role:
-        name: gluster
-    - import_role:
-        name: gluster-volume
