--- a/playbooks/roles/stacks/templates/traefik/stack.j2.yml
+++ b/playbooks/roles/stacks/templates/traefik/stack.j2.yml
@@ -69,7 +69,7 @@ services:
         traefik.enable: 'true'
         traefik.constraint-label: traefik-public
         traefik.http.routers.whoami.entrypoints: websecure
-        traefik.http.routers.whoami.rule: Host(`whoami.{{ app_domain_name }}`) || Host(`whoami2.{{ app_domain_name }}`)
+        traefik.http.routers.whoami.rule: Host(`whoami.{{ app_domain_name }}`)
         traefik.http.services.whoami.loadbalancer.server.port: 80
 
 volumes:
